Compucom CCQA/src/objects/Fiscal_Year_Model__c.object
<CustomObject>
    <fields>
        <fullName>Copy_Month__c</fullName>
        <formula>RIGHT(Name,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period_Id__c</fullName>
        <label>Fiscal Period Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Planning_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal_Planning_Year</label>
        <referenceTo>Fiscal_Year_Planning__c</referenceTo>
        <relationshipLabel>FCST Planning Fiscal Years</relationshipLabel>
        <relationshipName>FCST_Planning_Fiscal_Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Label__c</fullName>
        <label>Long_Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Number__c</fullName>
        <label># Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_Name__c</fullName>
        <label>Period Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Number__c</fullName>
        <label>Period Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Source__c</fullName>
        <label>Record Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Label__c</fullName>
        <label>Short Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>FCST Planning Fiscal Year</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Month_Number__c</columns>
        <columns>Copy_Month__c</columns>
        <columns>End_Date__c</columns>
        <columns>Fiscal_Planning_Year__c</columns>
        <columns>Fiscal_Period_Id__c</columns>
        <columns>Fiscal_Quarter__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Long_Label__c</columns>
        <columns>Period_Name__c</columns>
        <columns>Period_Number__c</columns>
        <columns>Short_Label__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Planning Fiscal Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCST Planning Fiscal Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>